Updated info image

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
 <div class="container">
   <hr>
   <h6 class="centering">
-    <p><img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/info_icon.png" width="22"> This app uses quantum computing to randomly generate writing prompts! </p>
-    <p>For more information, please look at the <a href="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/dnd_mustarter_kit_README.pdf">README</a>
+    <p> This app uses quantum computing to randomly generate writing prompts! </p>
+    <p><img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/info_icon.png" width="22">For more information, please look at the <a href="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/dnd_mustarter_kit_README.pdf">README</a>
       or check out the Github <a href="https://github.com/quantum-kittens/dnd-mustarter-kit/">repo</a>.</p>
       <img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/11/Gotham-Writers-Logo.png" style="width:30%;" >
   </h6>
