--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,10 @@
   <hr>
   <h6 class="centering">
     <p> This app uses quantum computing to randomly generate writing prompts! </p>
-    <p><img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/info_icon.png" width="22">For more information, please look at the <a href="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/dnd_mustarter_kit_README.pdf">README</a>
-      or check out the Github <a href="https://github.com/quantum-kittens/dnd-mustarter-kit/">repo</a>.</p>
+    <p> Click ‘Refresh’ to generate a new prompt. </p>
+    <p>If the same prompt shows up a number of times, don't worry! Simply click Refresh until you get a new one!</p>
+    <p><img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/info_icon.png" width="22">For more information, please look at the <a href="https://github.com/quantum-kittens/quantum-prompt-generator/blob/main/README.md">README</a>
+      or check out the Github <a href="https://github.com/quantum-kittens/quantum-prompt-generator">repo</a>.</p>
       <img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/11/Gotham-Writers-Logo.png" style="width:30%;" >
   </h6>
   
@@ -54,6 +56,7 @@
 {% block footer %}
 <hr>
 <h6 class="centering">
+  Created by <a href="https://www.radhapyarisandhir.com/">Radha Pyari Sandhir</a> and <a href="https://soham.dev/">Soham Pal</a>.
   <a href="https://unsplash.com/@amadorloureiroblanco">Photo by Amador Loureiro on Unsplash</a>
 </h6>
 
