--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
   <h6 class="centering">
     <p> This app uses quantum computing to randomly generate writing prompts! </p>
     <p> Click ‘Refresh’ to generate a new prompt. </p>
-    <p>If the same prompt shows up a number of times, don't worry! Simply click Refresh until you get a new one!</p>
+    <p>If the same prompt shows up a number of times, don't worry! Simply click 'Refresh' until you get a new one!</p>
     <p><img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/10/info_icon.png" width="22">For more information, please look at the <a href="https://github.com/quantum-kittens/quantum-prompt-generator/blob/main/README.md">README</a>
       or check out the Github <a href="https://github.com/quantum-kittens/quantum-prompt-generator">repo</a>.</p>
       <img src="https://www.radhapyarisandhir.com/wp-content/uploads/2020/11/Gotham-Writers-Logo.png" style="width:30%;" >
@@ -56,8 +56,8 @@
 {% block footer %}
 <hr>
 <h6 class="centering">
-  Created by <a href="https://www.radhapyarisandhir.com/">Radha Pyari Sandhir</a> and <a href="https://soham.dev/">Soham Pal</a>.
-  <a href="https://unsplash.com/@amadorloureiroblanco">Photo by Amador Loureiro on Unsplash</a>
+  <p>Created by <a href="https://www.radhapyarisandhir.com/">Radha Pyari Sandhir</a> and <a href="https://soham.dev/">Soham Pal</a>.</p>
+  <p><a href="https://unsplash.com/@amadorloureiroblanco">Photo by Amador Loureiro on Unsplash</a></p>
 </h6>
 
 {% endblock %}
